--- a/assets/sass/components/_index.scss
+++ b/assets/sass/components/_index.scss
@@ -1,4 +1,5 @@
-@import "display";
-@import "navigation";
-@import "icons";
-@import "buttons";
+@import 'display';
+@import 'navigation';
+@import 'icons';
+@import 'buttons';
+@import 'mobile-menu';
