--- a/assets/sass/utility/_variables.scss
+++ b/assets/sass/utility/_variables.scss
@@ -1,8 +1,9 @@
-$primary-font: "Open Sans", serif; // 'Open Sans'
-$secondary-font: "Slabo 27px", sans-serif; // 'Slabo'
+$primary-font: 'Open Sans', serif; // 'Open Sans'
+$secondary-font: 'Slabo 27px', sans-serif; // 'Slabo'
 
 // Colors
 $black: #18121e;
+$gray: #5a5363;
 $blue: #233237;
 $red: #984b43;
 $yellow: #eac67a;
