--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -15,19 +15,15 @@
 
 // Slick slider buttons
 .slick-nav {
-  display: none;
   position: absolute;
   top: 0;
   height: 100%;
   transition: transform 400ms ease-in-out;
   width: 10%;
   z-index: 2;
-
-  @include bp(md) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:hover {
     cursor: pointer;
@@ -61,6 +57,47 @@
 
     span {
       transform: rotate(-45deg);
+    }
+  }
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+
+  .slick-active {
+    button:after {
+      opacity: 1;
+      transform: scale(1.2);
+    }
+  }
+
+  button {
+    font-size: 0;
+    line-height: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    cursor: pointer;
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent;
+    margin: 0 0.5rem;
+
+    &:after {
+      content: '';
+      display: block;
+      position: relative;
+      background-color: $black;
+      opacity: 0.3;
+      height: 8px;
+      width: 8px;
+      border-radius: 50%;
+      transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
     }
   }
 }
