--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -13,13 +13,19 @@
   &__title {
     color: $yellow;
     font-size: 2.6rem;
-    letter-spacing: 11px;
+    letter-spacing: 5px;
     line-height: 1.2;
     padding: 10px 0;
     margin: 0;
+
+    @include bp(md) {
+      letter-spacing: 11px;
+    }
   }
   &__link {
-    margin-left: 130px;
+    @include bp(md) {
+      margin-left: 130px;
+    }
   }
   &.header-shrink {
     padding: 5px 10px;
@@ -30,9 +36,9 @@
 }
 
 .header-circle {
+  display: none;
   border: 2px solid white;
   border-radius: 50%;
-  display: flex;
   align-items: center;
   justify-content: center;
   background-color: $red;
@@ -44,6 +50,11 @@
   height: 90px;
   width: 90px;
   transition: transform 300ms ease-in-out;
+
+  @include bp(md) {
+    display: flex;
+  }
+
   &__inner {
     display: flex;
     align-items: center;
