--- a/assets/sass/utility/_variables.scss
+++ b/assets/sass/utility/_variables.scss
@@ -4,9 +4,12 @@ $secondary-font: 'Slabo 27px', sans-serif; // 'Slabo'
 // Colors
 $black: #18121e;
 $gray: #5a5363;
+$gray-light: #ccc;
 $blue: #233237;
 $red: #984b43;
 $yellow: #eac67a;
 $trans-tan: rgba(216, 216, 216, 0.9);
-$trans-gray: rgba(35, 51, 58, 0.8);
+$trans-gray: rgba(200, 200, 200, 0.8);
+$trans-dark-gray: rgba(35, 51, 58, 0.8);
+$trans-gray-light: rgba(250, 250, 250, 0.2);
 $hover-color: $blue;
