--- a/assets/sass/templates/_footer.scss
+++ b/assets/sass/templates/_footer.scss
@@ -1,3 +1,37 @@
-footer {
-  margin: 30px 0;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  background-color: $blue;
+  padding: 1rem 2rem;
+
+  &__contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__email,
+  &__phone {
+    color: $yellow;
+    font-size: 2.4rem;
+    margin-left: 4rem;
+  }
+  &__email {
+    transition: color 300ms ease-in-out;
+    &:hover {
+      color: lighten($yellow, 10%);
+    }
+  }
+}
+
+.logo-circle__footer {
+  position: relative;
+  height: 70px;
+  width: 70px;
+  top: 0;
+  left: 0;
+
+  .logo-circle__text {
+    font-size: 36px;
+  }
 }
