--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -23,19 +23,20 @@
     }
   }
   &__link {
+    margin-left: 1rem;
     @include bp(md) {
       margin-left: 130px;
     }
   }
   &.header-shrink {
     padding: 5px 10px;
-    .header-circle {
+    .logo-circle {
       transform: scale(0.8);
     }
   }
 }
 
-.header-circle {
+.logo-circle {
   display: none;
   border: 2px solid white;
   border-radius: 50%;
