--- a/assets/sass/templates/_index.scss
+++ b/assets/sass/templates/_index.scss
@@ -1,4 +1,6 @@
-@import "header";
-@import "footer";
-@import "front-page";
-@import "content";
+@import 'header';
+@import 'footer';
+@import 'front-page';
+@import 'content';
+@import 'spaces';
+@import 'single-space';
