--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -697,18 +697,25 @@ body.mobile-menu-open {
 
 .footer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   position: relative;
   background-color: #233237;
   padding: 1rem 2rem; }
   .footer__contact {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center; }
+    @media only screen and (min-width: 800px) {
+      .footer__contact {
+        flex-wrap: nowrap; } }
   .footer__email, .footer__phone {
     color: #eac67a;
-    font-size: 2.4rem;
-    margin-left: 4rem; }
+    font-size: 2.4rem; }
+    @media only screen and (min-width: 800px) {
+      .footer__email, .footer__phone {
+        margin-left: 4rem; } }
   .footer__email {
     transition: color 300ms ease-in-out; }
     .footer__email:hover {
