--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -30,7 +30,7 @@
   }
 
   .slick-circle {
-    background-color: $trans-gray-light;
+    background-color: $trans-gray-light-two;
     width: 85px;
     height: 85px;
     display: flex;
