--- a/assets/sass/templates/_front-page.scss
+++ b/assets/sass/templates/_front-page.scss
@@ -111,7 +111,7 @@
   }
   &__overlay {
     display: none;
-    background-color: $trans-gray;
+    background-color: $trans-dark-gray;
     cursor: pointer;
     position: absolute;
     top: 0;
