--- a/assets/sass/utility/_variables.scss
+++ b/assets/sass/utility/_variables.scss
@@ -11,5 +11,6 @@ $yellow: #eac67a;
 $trans-tan: rgba(216, 216, 216, 0.9);
 $trans-gray: rgba(200, 200, 200, 0.8);
 $trans-dark-gray: rgba(35, 51, 58, 0.8);
-$trans-gray-light: rgba(250, 250, 250, 0.2);
+$trans-gray-light: rgba(250, 250, 250, 0.3);
+$trans-gray-light-two: rgba(250, 250, 250, 0.5);
 $hover-color: $blue;
