--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: CWK Base Theme
+Theme Name: Painter's Building
 Author: Connor Klausing
-Description: This theme is created as a base for other themes that I'll design.
-Version: 0.2.0
-Text Domain: wh701;
+Description: Theme for the paiter's building.
+Version: 1.0
+Text Domain: painters_bld;
 */
