--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -21,16 +21,22 @@ div.aligncenter {
   @media only screen and (min-width: 640px) {
     .alignright {
       float: right;
-      margin: 5px -40px 20px 20px;
+      margin: 5px 0 20px 20px;
       width: auto; } }
+  @media only screen and (min-width: 800px) {
+    .alignright {
+      margin: 5px -2rem 20px 20px; } }
 
 .alignleft {
   width: 100%; }
   @media only screen and (min-width: 640px) {
     .alignleft {
       float: left;
-      margin: 5px 20px 20px -40px;
+      margin: 5px 20px 20px 0;
       width: auto; } }
+  @media only screen and (min-width: 800px) {
+    .alignleft {
+      margin: 5px 20px 20px -2rem; } }
 
 a img.alignright {
   float: right;
@@ -122,10 +128,12 @@ a img.aligncenter {
       margin: 0 auto 0 12%; } }
 
 img {
+  object-fit: cover;
   max-width: 100%; }
   @media only screen and (max-width: 640px) {
     img {
-      width: 100%; } }
+      width: 100%;
+      height: auto; } }
 
 /**
  * Taken from: Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
@@ -307,7 +315,8 @@ body {
   background-color: white;
   font-family: "Open Sans", serif;
   line-height: 1.6;
-  color: #18121e; }
+  color: #18121e;
+  word-wrap: break-word; }
 
 h1,
 h2,
@@ -327,7 +336,7 @@ h3 {
   font-size: 2.8rem; }
 
 p {
-  font-size: 2rem; }
+  font-size: 1.8rem; }
 
 a {
   font-size: 1.8rem;
@@ -384,18 +393,18 @@ main {
 
 .main-nav {
   padding-right: 2rem; }
-  .main-nav .page_item {
+  .main-nav .menu-item {
     margin-right: 2rem; }
-    .main-nav .page_item a {
+    .main-nav .menu-item a {
       display: block;
       color: #18121e;
       padding: 4px 0;
       position: relative;
       overflow: hidden; }
-      @media only screen and (min-width: 800px) {
-        .main-nav .page_item a {
+      @media only screen and (min-width: 960px) {
+        .main-nav .menu-item a {
           color: #eac67a; } }
-      .main-nav .page_item a:before, .main-nav .page_item a:after {
+      .main-nav .menu-item a:before, .main-nav .menu-item a:after {
         display: block;
         content: '';
         width: 100%;
@@ -403,13 +412,13 @@ main {
         left: 0;
         border-top: 2px solid #984b43;
         transition: transform 300ms ease-in-out; }
-      .main-nav .page_item a:before {
+      .main-nav .menu-item a:before {
         top: 0;
-        transform: translateX(-100%); }
-      .main-nav .page_item a:after {
+        transform: translateX(-101%); }
+      .main-nav .menu-item a:after {
         bottom: 0;
-        transform: translateX(100%); }
-      .main-nav .page_item a:hover:before, .main-nav .page_item a:hover:after {
+        transform: translateX(101%); }
+      .main-nav .menu-item a:hover:before, .main-nav .menu-item a:hover:after {
         transform: translateX(0); }
 
 @media only screen and (min-width: 800px) {
@@ -423,14 +432,14 @@ main {
 #menu-footer-menu a {
   font-weight: 700; }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 960px) {
   #menu-main-menu {
     margin: 20px 10%; } }
 
 .menu-item {
   width: 100%;
   margin: 10px 0; }
-  @media only screen and (min-width: 800px) {
+  @media only screen and (min-width: 960px) {
     .menu-item {
       width: auto;
       margin: 0; } }
@@ -555,7 +564,7 @@ main {
   width: 100%;
   z-index: 1;
   transition: transform 400ms ease-out; }
-  @media only screen and (min-width: 800px) {
+  @media only screen and (min-width: 960px) {
     .main-nav {
       background-color: transparent;
       box-shadow: none;
@@ -581,7 +590,7 @@ main {
   width: 3rem;
   height: 2.6rem;
   transition: top 300ms ease-in-out; }
-  @media only screen and (min-width: 800px) {
+  @media only screen and (min-width: 960px) {
     .mobile-menu-button {
       display: none; } }
   .mobile-menu-button .top,
@@ -733,10 +742,13 @@ body.mobile-menu-open {
 .footer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
   background-color: #233237;
   padding: 1rem 2rem; }
+  @media only screen and (min-width: 800px) {
+    .footer {
+      justify-content: space-between; } }
   .footer__contact {
     display: flex;
     flex-wrap: wrap;
@@ -746,8 +758,11 @@ body.mobile-menu-open {
       .footer__contact {
         flex-wrap: nowrap; } }
   .footer__email, .footer__phone {
+    display: block;
+    width: 100%;
     color: #eac67a;
-    font-size: 2.4rem; }
+    font-size: 1.8rem;
+    text-align: center; }
     @media only screen and (min-width: 800px) {
       .footer__email, .footer__phone {
         margin-left: 4rem; } }
@@ -932,13 +947,13 @@ body.mobile-menu-open {
 .spaces__hero {
   background-size: cover;
   margin-top: 70px;
-  height: 300px; }
+  height: 200px; }
   @media only screen and (min-width: 800px) {
     .spaces__hero {
-      height: 400px; } }
+      height: 300px; } }
   @media only screen and (min-width: 960px) {
     .spaces__hero {
-      height: 500px; } }
+      height: 400px; } }
 .spaces__title {
   text-align: center; }
 .spaces__gallery {
@@ -1029,11 +1044,9 @@ body.mobile-menu-open {
   font: 3.6rem "Slabo 27px", sans-serif; }
 
 .contact__hero {
+  background-size: cover;
   position: relative;
-  height: 200px; }
-  @media only screen and (min-width: 640px) {
-    .contact__hero {
-      height: 300px; } }
+  padding: 1rem 0; }
   @media only screen and (min-width: 800px) {
     .contact__hero {
       height: 400px; } }
@@ -1044,20 +1057,26 @@ body.mobile-menu-open {
   background-color: rgba(250, 250, 250, 0.5);
   top: 50%;
   padding: 1rem;
-  margin: 1rem; }
+  margin: 0 1rem; }
   @media only screen and (min-width: 640px) {
     .contact__card {
       padding: 2rem;
-      margin: 2rem; } }
+      margin: 0 2rem; } }
   @media only screen and (min-width: 800px) {
     .contact__card {
       position: absolute;
       top: 3rem;
       right: 3rem;
       width: 50%; } }
-.contact__title {
+.contact__card-title {
   color: #984b43;
-  font: 3.6rem "Slabo 27px", sans-serif; }
+  font: 3.6rem "Slabo 27px", sans-serif;
+  margin: 2rem 0; }
+.contact__title {
+  text-align: center; }
+.contact__form {
+  padding-top: 6rem;
+  padding-bottom: 6rem; }
 
 /* Slider */
 .slick-slider {
