--- a/assets/sass/components/_mobile-menu.scss
+++ b/assets/sass/components/_mobile-menu.scss
@@ -17,7 +17,7 @@
   z-index: 1;
   transition: transform 400ms ease-out;
 
-  @include bp(md) {
+  @include bp($mobile-menu-bp) {
     background-color: transparent;
     box-shadow: none;
     display: block;
@@ -49,7 +49,7 @@
   height: 2.6rem;
   transition: top 300ms ease-in-out;
 
-  @include bp(md) {
+  @include bp($mobile-menu-bp) {
     display: none;
   }
 
