--- a/assets/sass/templates/_contact.scss
+++ b/assets/sass/templates/_contact.scss
@@ -1,11 +1,9 @@
 .contact {
   &__hero {
+    background-size: cover;
     position: relative;
-    height: 200px;
+    padding: 1rem 0;
 
-    @include bp(sm) {
-      height: 300px;
-    }
     @include bp(md) {
       height: 400px;
     }
@@ -17,11 +15,11 @@
     background-color: $trans-gray-light-two;
     top: 50%;
     padding: 1rem;
-    margin: 1rem;
+    margin: 0 1rem;
 
     @include bp(sm) {
       padding: 2rem;
-      margin: 2rem;
+      margin: 0 2rem;
     }
     @include bp(md) {
       position: absolute;
@@ -30,7 +28,15 @@
       width: 50%;
     }
   }
-  &__title {
+  &__card-title {
     @include header-two;
+    margin: 2rem 0;
+  }
+  &__title {
+    text-align: center;
+  }
+  &__form {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 }
