--- a/assets/sass/utility/_variables.scss
+++ b/assets/sass/utility/_variables.scss
@@ -14,3 +14,6 @@ $trans-dark-gray: rgba(35, 51, 58, 0.8);
 $trans-gray-light: rgba(250, 250, 250, 0.3);
 $trans-gray-light-two: rgba(250, 250, 250, 0.5);
 $hover-color: $blue;
+
+// Sizes
+$mobile-menu-bp: 'lg';
